--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue_cli_optimize_static_resource</title>
+    <script src="static/js/vue.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
