--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue_cli_optimize_static_resource</title>
     <script src="static/js/vue.min.js"></script>
+    <script src="static/js/vue-router.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
