--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue_cli_optimize_static_resource</title>
-    <script src="static/js/vue.min.js"></script>
-    <script src="static/js/vue-router.min.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <script src="/static/js/vue.min.js"></script>
+    <script src="/static/js/vue-router.min.js"></script>
+    <script src="/static/js/element.lib.index.js"></script>
+    <link rel="stylesheet" href="/static/css/element.lib.theme-chalk.index.css">
+    <script src="/static/js/echarts.min.js"></script>
+    <script src="/static/js/moment.min.js"></script>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
